# Investor-Research-Agents-System

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  PROJECT_PLAN.md  PROJECT_PLAN_OPTION_A.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260513_0001_initial_schema.py  20260514_0002_add_report_tags.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  dashboard.py  organizations.py  reports.py  research.py  watchlist.py
backend/app/core/: config.py  database.py  errors.py  security.py
backend/app/models/: audit_log.py  base.py  enums.py  invite.py  membership.py  organization.py  report.py  user.py  watchlist.py
backend/app/schemas/: auth.py  common.py  dashboard.py  organization.py  report.py  research.py  watchlist.py
backend/app/scripts/: ingest_documents.py  seed_demo.py
backend/app/services/: organizations.py
backend/app/services/research/: __init__.py  agent.py  cache.py  knowledge_base.py  tools.py
docs/: DEMO_SCRIPT.md  INTERVIEW_QA.md  bill-management-app-architecture.md  build_question_paper.py
docs/diagrams/: README.md  bill-management-app-architecture.excalidraw  generate-architecture-excalidraw.mjs  generate-bill-management-architecture-excalidraw.mjs  investment-research-architecture.excalidraw  klypup-architecture.excalidraw
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: agent-orchestration.tsx  (+10 more)
(+7 files in other folders)
