[project]
name = "investment-research-api"
version = "0.1.0"
description = "Backend API for the AI-powered investment research dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "pwdlib[argon2]>=0.2.1,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
